--- a/HeartOfGold/Views/Home/Dashboard.cshtml
+++ b/HeartOfGold/Views/Home/Dashboard.cshtml
@@ -58,7 +58,7 @@
                 <div class="col-md-1 center" style="padding-right: 0; padding-top: 4px;">
                     <i class="far fa-clock" style="font-size: 3rem;"></i>
                 </div>
-                <div class="col-md-3" style="padding-left: 0; padding-top: 6px">                   
+                <div class="col-md-3" style="padding-left: 0; padding-top: 7px; font-weight:100">                   
                     <div id="time" style="margin-left: -10px">
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                         <i class="fas fa-envelope" id="mailIcon"></i>
                         <div class="center">
                             <a href="" data-toggle="modal" data-target="#emailModal">
-                                Quick Send email
+                                Quick Send Email
                             </a>
                         </div>
                     </div>
@@ -113,12 +113,33 @@
                 <div class="col-md-4">
                     <div class="panel panel-default" id="dashboardStudent">
                         <i class="fas fa-user-friends" id="dashStudIcon"></i>
-                        <p class="lead" id="studLead">Registered students: 103</p>
+                        <p class="lead" id="studLead">Registered students: @Model.NumberOfStudents</p>
                         <div class="center" id="studLink">
                             <a href="@Url.Action("Current", "Student")">
                                 I want to see the currently signed up students
                             </a>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="panel panel-default" id="dashboardStudent">
+                        <div class="col-md-3" id="informatics" style="background: #ebebec">
+                            <i class="fas fa-info" id="infoIcon"></i>
+                            <p class="lead">Informatics</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="lead" id="DonItems">Donation items in numbers:</p>
+                            <ul class="list-group" id="infoList">
+                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">Food <p class="lead" id="li1">@Model.TotalFoodItems</p> <i class="fas fa-arrow-right arrow"></i></li>
+                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">Stationery <p class="lead" id="li2">@Model.TotalStationeryItems</p><i class="fas fa-arrow-right arrow"></i></li>
+                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">Clothes <p class="lead" id="li3">@Model.TotalClothesItems</p><i class="fas fa-arrow-right arrow"></i></li>
+                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">Textbooks <p class="lead" id="li4">@Model.TotalTextbookItems</p><i class="fas fa-arrow-right arrow"></i></li>
+                                <li class="list-group-item" style="padding: 3px;padding-left: 12px;">Other<p class="lead" id="li5">@Model.TotalOtherItems</p> <i class="fas fa-arrow-right arrow"></i></li>
+                            </ul>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
