--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -17,32 +17,41 @@
     </a>
 </div>
 <br />
-<hr />
-
-
-@*<div class="jumbotron">
-    <p class="lead"> <strong>Heart of Gold</strong> is a web service designed for students in the School of ICT at Nelson Mandela University.</p>
-    <br />
-    <blockquote>
-        <p>For to be free is not merely to cast off one’s chains, but to live in a way that respects and enhances the freedom of others.</p>
-        <footer>Nelson Mandela</footer>
-    </blockquote>
-</div>*@
+<br />
 
 <div class="row">
-    <div class="col-md-4">
-        <h3>Are you a student?</h3>
-        <p>
-            Create yourself an account. It's free. Alternatively, browse to the Help and FAQ link at the top of the page to guide you through using the website!
-        </p>
+    <div class="col-md-4 col-md-offset-2">
+        <div class="panel panel-default home-panel">
+            <h3>For the student</h3>
+            <p class="lead home-panel-p">
+                Create yourself an account. It's free. Alternatively, browse to the Help and FAQ link at the top of the page to guide you through using the website!
+            </p>
+        </div>
     </div>
     <div class="col-md-4">
-        <h3>Interested in donating?</h3>
-        <p>Contact the Heart of Gold administrator by sending an email to admin@hog.co.za.</p>
+        <i class="fas fa-user-graduate home-icons" id="homeLogo1"></i>
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 col-md-offset-2">
+            <i class="fas fa-hands-helping home-icons" id="homeLogo2"></i>
+        </div>
+        <div class="col-md-4">
+            <div class="panel panel-default home-panel">
+                <h3>Interested in donating?</h3>
+                <p class="lead home-panel-p">Contact the Heart of Gold administrator by sending an email to admin@hog.co.za.</p>
+            </div>
+        </div>
+</div>
+<div class="row">
+    <div class="col-md-4 col-md-offset-2">
+        <div class="panel panel-default home-panel">
+            <h3>Let's make a difference, together.</h3>
+            <p class="lead home-panel-p">We believe strongly in the philosophy of Ubuntu, we care about those that are disadvantaged. Let's help them out.</p>
+        </div>
     </div>
     <div class="col-md-4">
-        <h3>Let's make a difference, together.</h3>
-        <p>We believe strongly in the philosophy of Ubuntu, we care about those that are disadvantaged. Let's help them out.</p>
+        <i class="fas fa-people-carry home-icons" id="homeLogo3"></i>
     </div>
 </div>
 <hr />
