--- a/HeartOfGold/Views/Item/Index.cshtml
+++ b/HeartOfGold/Views/Item/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
+@*<div class="row">
     <div class="col-md-5 col-sm-5 col-lg-5">
         <ol class="breadcrumb">
             <li>
@@ -20,9 +20,9 @@
             </li>
         </ol>
     </div>
-</div>
+</div>*@
 
-<h3>Inventory</h3>
+<h3>Donation Inventory</h3>
 <hr />
 
 <p class="lead">Collection of donated items</p>
@@ -78,19 +78,16 @@
         $('#Inventory').dataTable({
             "pageLength": 25
         });
-
-        //$(function () {
-        //    $('#checkbox').change(function () {
-        //        var data = {};
-        //        data[$(this).attr('name')] = $(this).is(':checked');
-
-        //        $.ajax({
-        //            url: $(this).data('url'),
-        //            type: 'POST',
-        //            data: data
-        //        });
-        //    });
-        //});
     </script>
+
+    @if(TempData["Saved"] != null)
+    {
+        <script type="text/javascript">
+            $(document).ready(function() {
+                toastr.success('Successfully added donation item.');
+            });
+
+        </script>
+    }
 }
 
