--- a/HeartOfGold/Views/Shared/_Layout.cshtml
+++ b/HeartOfGold/Views/Shared/_Layout.cshtml
@@ -15,40 +15,18 @@
     @*<link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />*@
 
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top navbar-color" role="navigation" id="navbartop">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("< Heart of Gold >", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-               
-            </div>
-            <div class="navbar-collapse collapse navbar-fontsize center" style="font-size:1.1em">
-                <ul class="nav navbar-nav">
-                    @*<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin Control <span class="caret"></span></a>
-                        @*<ul class="dropdown-menu" role="menu" id="navDropMenu">
-                            <li>@Html.ActionLink("Manage Inventory", "Index", "Item")</li>
-                            <li class="divider"></li>
-                            <li>@Html.ActionLink("Student Requests", "Index", "Request")</li>
-                            <li class="divider"></li>
-                            <li>@Html.ActionLink("Donors", "Index", "Donors")</li>
-                        </ul>*@
-                    @*</li>*@
-                    <li>@Html.ActionLink("Admin Dashboard", "Dashboard", "Home")</li>
-                    <li>@Html.ActionLink("Our Mission", "About", "Home")</li>
-                    <li>@Html.ActionLink("Need help?", "ViewHelp", "Help")</li>
-                    <li>@Html.ActionLink("Reporting", "Index", "Reports")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>
+<body>   
+    @{ 
+        if (User.IsInRole("Administrator"))
+        {
+            @Html.Partial("_AdminNavBar");
+        }
 
+        else
+        {
+            @Html.Partial("_NavBar");
+        }
+    }
     <div>
         <br />
         <div class="container body-content">
@@ -71,8 +49,8 @@
         <div class="navbar navbar-inverse navbar-color navbar-fixed-bottom container-fluid">
             <div class="navbar-collapse collapse navbar-fontsize center">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Contact Us", "About", "Home")</li>
-                    <li>@Html.ActionLink("Need Help?", "ViewHelp", "Help")</li>
+                    <li>@Html.ActionLink("Get in contact", "About", "Home")</li>
+                    @*<li>@Html.ActionLink("Need Help?", "ViewHelp", "Help")</li>*@
                 </ul>
             </div>
         </div>
