--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div>
     <img src="~/Content/Images/nmupic.png" alt="Nelson Mandela University" class="center-block img-rounded nmu-img img-responsive" />
 </div>
-<hr />
+<hr id="homeHr"/>
 
 <div class="container text-center">
     <h3>Are you a student? Are you struggling?</h3>
@@ -31,7 +31,9 @@
     <div class="col-md-4">
         <i class="fas fa-user-graduate home-icons" id="homeLogo1"></i>
     </div>
-    </div>
+    
+</div>
+
     <div class="row">
         <div class="col-md-4 col-md-offset-2">
             <i class="fas fa-hands-helping home-icons" id="homeLogo2"></i>
