--- a/HeartOfGold/Views/Help/Index.cshtml
+++ b/HeartOfGold/Views/Help/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Help and FAQ";
+    ViewBag.Title = "Online Help";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,33 +9,33 @@
     <hr />
 
     <div id="Faq">
-        <h3>What exactly is Heart of Gold?</h3>
+        <h3>What is Heart of Gold?</h3>
         <div>
-            <p class="lead">
+            <p class="lead p-text">
                 It is a free-to-use platform for students within the School of ICT at Nelson Mandela University. Students who are disadvantaged can submit a request for items they are in need of.
             </p>
         </div>
         <h3>How many requests am I allowed to submit?</h3>
         <div>
-            <p class="lead">
-                <strong>Two</strong> requests per day. However, exceptions can be made under special circumstances.
+            <p class="lead p-text">
+                One request per day. However, exceptions can be made under special circumstances. 
             </p>
         </div>
         <h3>Who can donate to the students?</h3>
         <div>
-            <p class="lead">
+            <p class="lead p-text">
                 Anyone who wants to!
             </p>
         </div>
         <h3>How do I know what is happening with my submitted request?</h3>
         <div>
-            <p class="lead">
+            <p class="lead p-text">
                 At the top of the web page, click on <strong>Student Requests</strong>. Then, select <strong>View My Requests</strong>. The status and progress of your request will be shown here!
             </p>
         </div>
         <h3>I am still confused about a few things. Who can I contact?</h3>
         <div>
-            <p class="lead">
+            <p class="lead p-text">
                 You are welcome to contact the website administrator at heartadmin@mandela.ac.za.
             </p>
         </div>
