--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -5,22 +5,20 @@
 <div>
     <img src="~/Content/Images/nmupic.png" alt="Nelson Mandela University" class="center-block img-rounded nmu-img img-responsive" />
 </div>
-<hr id="homeHr"/>
+<hr style="margin:10px;"/>
 
 <div class="container text-center">
     <h3>Are you a student? Are you struggling?</h3>
     <p class="lead">Create a request for items that you need. You will be notified when we can help you.</p>
-    <br />
     <a href="@Url.Action("SubmitRequest", "Request")" class="btn btn-primary btn-lg register-button">
         <i class="fas fa-address-card" style="font-size:1.1em"></i>
         &nbsp;&nbsp;Submit a request
     </a>
 </div>
 <br />
-<br />
-
+<hr />
 <div class="row">
-    <div class="col-md-4 col-md-offset-2">
+    <div class="col-md-4">
         <div class="panel panel-default home-panel">
             <h3>For the student</h3>
             <p class="lead home-panel-p">
@@ -28,13 +26,30 @@
             </p>
         </div>
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <i class="fas fa-user-graduate home-icons" id="homeLogo1"></i>
+    </div>*@
+    @*<div class="col-md-4">
+        <i class="fas fa-hands-helping home-icons" id="homeLogo2"></i>
+    </div>*@
+    <div class="col-md-4">
+        <div class="panel panel-default home-panel">
+            <h3>Interested in donating?</h3>
+            <p class="lead home-panel-p">Contact the Heart of Gold administrator by sending an email to admin@hog.co.za.</p>
+        </div>
     </div>
-    
+    <div class="col-md-4">
+        <div class="panel panel-default home-panel">
+            <h3>Let's make a difference, together.</h3>
+            <p class="lead home-panel-p">We believe strongly in the philosophy of Ubuntu, we care about those that are disadvantaged. Let's help them out.</p>
+        </div>
+    </div>
+    @*<div class="col-md-4">
+        <i class="fas fa-people-carry home-icons" id="homeLogo3"></i>
+    </div>*@
 </div>
 
-    <div class="row">
+    @*<div class="row">
         <div class="col-md-4 col-md-offset-2">
             <i class="fas fa-hands-helping home-icons" id="homeLogo2"></i>
         </div>
@@ -55,5 +70,5 @@
     <div class="col-md-4">
         <i class="fas fa-people-carry home-icons" id="homeLogo3"></i>
     </div>
-</div>
+</div>*@
 <hr />
